--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset='utf-8'>
 	<meta content='width=device-width, initial-scale=1.0, user-scalable=no' name='viewport'>
 	<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css", rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <title>Poly Founders</title>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
-  <link href='style.css' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+      	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css", rel="stylesheet">
+      <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,400italic' rel='stylesheet' type='text/css'>
+  <link href='index.css' rel='stylesheet' type='text/css'>
   </head>
 
 
@@ -24,8 +24,8 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#events">Events</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="events.html">Events</a></li>
             <!-- <li><a href="#">Blog</a></li> -->
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -33,60 +33,23 @@
       </div>
     </nav>
 
-
-		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-		  <!-- Indicators -->
-		  <ol class="carousel-indicators">
-		    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-		    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-		    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-		  </ol>
-
-		  <!-- Wrapper for slides -->
-		  <div class="carousel-inner">
-		    <div class="item active">
-		      <img id="idea-img" src="images/idea.png" alt="">
-		      <div class="carousel-caption">
-		      	<h3>Welcome to the official Poly Founders website </h3>
-		      </div>
-		    </div>
-		    <div class="item">
-		      <img src="images/hackpoly.jpg" alt="...">
-		      <div class="carousel-caption hackpoly-caption">
-		      	<h3>Poly Founders puts on Hackpoly</h3>
-		      </div>
-		    </div>
-		    <div class="item">
-		      <img src="images/newimg.jpg" alt="...">
-		      <div class="carousel-caption">
-		      	<h3>We are a group of entrepreneurs</h3>
-		      </div>
-		    </div>
-		  </div>
-
-		  <!-- Controls -->
-		  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-		    <span class="glyphicon glyphicon-chevron-left"></span>
-		  </a>
-		  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-		    <span class="glyphicon glyphicon-chevron-right"></span>
-		  </a>
-		</div> <!-- Carousel -->
+<div class="splash">
+    <div class="image">
+      <img src="images/lightbulb.png">
+   <div class="idea">What's <br/> Your <br/> Idea &#63;</div>
+        </div>
+      </div>
 
 
     <div class="about text-center" id="about">
     	<div class="container">
     		<div class="row">
-    			<div class="col-md-3 col-md-offset-1">
-    			<h2>Our story began in 2012</h2>
-    			</div>
-    			<div class="col-md-7 col-md-offset-1">
-    			<p>Poly Founders was created with the purpose of connecting young entrepreneurs of all backgrounds under a common roof. While Cal Poly Pomona is our home, we welcome students, alumni, and professionals from all universities and organizations.
-          Poly Founders works with budding entrepreneurs, exceptional students, and prominent professors in order to unite the worlds of entrepreneurship, academia, and industry. We help entrepreneurs by offering our resources, knowledge, and network.</p>
+    			<h2>WHAT IS A POLY FOUNDER?</h2>
+    			<p><span class="fancy">poly founder</span>- A student who wants to make a difference in the world. Lorem ipsum dolor sit amet, ut putant quaerendum usu, ex vis meis rebum meliore. Dicunt posidonium his at. Cu cum platonem sententiae, ea mei suas wisi adipisci. Veri meliore fuisset ex mel, quot eius lorem vel id. Eam accusata atomorum adversarium id. Mutat essent vidisse an duo, et pri vidit solet vocent, stet accusata conceptam usu in.
+</p>
           </div>
     		</div>
     	</div>
-    </div>
 
 <div class="feature text-center">
       <div class="container-fluid">
@@ -94,36 +57,43 @@
           <div class="col-sm-3 four-pts" id="learn-block">
             <div class="overlay"></div>
             <h2>Learn</h2>
-            <p>
+            <p class="info">
               We teach you the basics for what it takes to be an entrepreneur. From starting your business from the ground up to pitching to investors to finding the ideal co-founders, we have the resources to help.
             </p>
           </div>
           <div class="col-sm-3 four-pts" id="network-block">
             <div class="overlay"></div>
             <h2>Network</h2>
-            <p>
+            <p class="info">
               Your Network is your Net Worth. We at Poly Founders have a vast network of CEO's, Founders, Entrepreneurs, VP's of Fortune 500 companies and Investors. Ask us, we will connect the dots for you.
-            </p>
+              </p>
           </div>
           <div class="col-sm-3 four-pts" id="do-block">
             <div class="overlay"></div>
             <h2>Innovate</h2>
-            <p>
+            <p class="info">
               Be disruptive. We organize Hackpoly, a 24 hour event where students from all over get together and collaboratively create a product like an app or website, and go on to pitch to successful entrepreneurs and executives.
             </p>
           </div>
           <div class="col-sm-3 four-pts" id="hack-block">
             <div class="overlay"></div>
             <h2>Compete</h2>
-            <p>
+            <p class="info">
               Have the next million dollar idea? Come to our annual Bronco Startup Challenge where we have over $10,000 to give out.
             </p>
           </div>
         </div>
       </div>
     </div>
-
-    <div class="events" id="events">
+<div class="about text-center" id="about">
+    	<div class="container">
+    		<div class="row">
+    			<h2>ARE YOU A POLY FOUNDER?</h2>
+    			<div class="btn">SIGN UP</div>
+          </div>
+    		</div>
+    	</div>
+<!--    <div class="events" id="events">
     	<div class="container">
       <h2>Our Events</h2>
     		<div class="row">
@@ -169,30 +139,31 @@
     	</div>
     </div>
 
-<!--     <div class="contact cust-pad text-center" id="contact">
+     <div class="contact cust-pad text-center" id="contact">
     	<div class="container">
     		<div class="row">
     			<div class="col-md-6 col-md-offset-3">
     			<p>Got ideas or questions? Reach out to us:</p>
-    			<a href="mailto:info@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
-    			<a href="http://www.facebook.com/polyfounders" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
-    			<a href="http://www.twitter.com/polyfounders" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
-    			<a href="http://www.instagram.com/polyfounders" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-    			<a href="http://www.github.com/polyfounders" target="_blank"><i class="fa fa-github fa-2x"></i></a>
+    			
     			</div>
     		</div>
     	</div>
-    </div> -->
+    </div>-->
 
  	 	<div class="footer cust-pad">
  	 		<div class="container">
- 	 			<div class="row">
- 	 			<p>© 2015 Poly Founders | Making Awesome Happen.</p>
+ 	 			<div class="copyright">
+ 	 			<p>© 2015 POLY FOUNDERS | MAKING AWESOME HAPPEN.</p>
+                <a href="mailto:info@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
+    			<a href="http://www.facebook.com/polyfounders" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
+    			<a href="http://www.twitter.com/polyfounders" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+    			<a href="http://www.instagram.com/polyfounders" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
 	 	 		</div>
 	 	 	</div>
   	</div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </body>
 </html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="polyfounders.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
