--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,11 @@
   <meta charset='utf-8'>
 	<meta content='width=device-width, initial-scale=1.0, user-scalable=no' name='viewport'>
 	<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css", rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <title>Poly Founders</title>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
-  <link href='style.css' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+      	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css", rel="stylesheet">
+      <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,400italic' rel='stylesheet' type='text/css'>
+  <link href='contact.css' rel='stylesheet' type='text/css'>
   </head>
 
 
@@ -23,101 +23,36 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#events">Events</a></li>
+            <li><a id="home" href="index.html">Home</a></li>
+            <li><a id="about" href="about.html">About</a></li>
+            <li><a id="events" href="events.html">Events</a></li>
             <!-- <li><a href="#">Blog</a></li> -->
-            <li><a href="contact.html">Contact</a></li>
+            <li><a id="contact" href="contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
     </nav>
-
-    <div class="eboard-members col-md-6 col-md-offset-3">
-      <div class="container">
-        <div class="row">
-          <dl>
-            <br>
-            <h1>Executive Board</h1>
-            <dt>
-              <h3>Simal Adenwala - President</h3>
-            </dt>
-            <dd>
-              <a href="mailto:simal@polyfounders.com">simal@polyfounders.com</a>
-            </dd>
-            <dt>
-              <h3>Rushi Shah - Vice President</h3>
-            </dt>
-            <dd>
-              <a href="mailto:rushi@polyfounders.com">rushi@polyfounders.com</a>
-            </dd>
-            <dt>
-              <h3>Camille Nibungco - VP of Operations</h3>
-            </dt>
-            <dd>
-              <a href="mailto:camille@polyfounders.com">camille@polyfounders.com</a>
-            </dd>
-            <dt>
-              <h3>Nick Verity - VP of Marketing</h3>
-            </dt>
-            <dd>
-              <a href="mailto:nick@polyfounders.com">nick@polyfounders.com</a>
-            </dd>
-            <dt>
-              <h3>Tony Chaw - VP of Technology</h3>
-            </dt>
-            <dd>
-              <a href="mailto:tony@polyfounders.com">tony@polyfounders.com</a>
-            </dd>
-            <dt>
-              <h3>Eric Liang - Webmaster</h3>
-            </dt>
-            <dd>
-              <a href="mailto:eric@polyfounders.com">eric@polyfounders.com</a>
-            </dd>
-            <br><br><br>
-            <h1>Student Advisors</h1>
-            <dt>
-              <h3>Amy Ta</h3>
-            </dt>
-            <dd>
-              <a href="mailto:amy@polyfounders.com">amy@polyfounders.com</a>
-            </dd>
-            <dt>
-              <h3>Austin Chang</h3>
-            </dt>
-            <dd>
-              <a href="mailto:austin@polyfounders.com">austin@polyfounders.com</a>
-            </dd>
-          </dl>
-        </div>
+      <div class="content">
+      <img class="back" src="images/contact.jpg">
+      <div class="text">
+          <p>Any questions, comments, suggestions, or crazy ideas?<p>
+          <p><a href="mailto:simal@polyfounders.com">Drop us a line</a></p>
+          </div>
       </div>
-    </div>
-
-    <div class="contact cust-pad text-center" id="contact">
-    	<div class="container">
-    		<div class="row">
-    			<div class="col-md-6 col-md-offset-3">
-    			<p>Got ideas or questions? Reach out to us:</p>
-    			<a href="mailto:info@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
+ 	 <div class="footer cust-pad">
+ 	 		<div class="container">
+ 	 			<div class="copyright">
+ 	 			<p>© 2015 POLY FOUNDERS | MAKING AWESOME HAPPEN.</p>
+                <a href="mailto:simal@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
     			<a href="http://www.facebook.com/polyfounders" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
     			<a href="http://www.twitter.com/polyfounders" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
     			<a href="http://www.instagram.com/polyfounders" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
-    			<a href="http://www.github.com/polyfounders" target="_blank"><i class="fa fa-github fa-2x"></i></a>
-    			</div>
-    		</div>
-    	</div>
-    </div>
-
- 	 	<div class="footer cust-pad">
- 	 		<div class="container">
- 	 			<div class="row">
- 	 			<p>© 2015 Poly Founders | Making Awesome Happen.</p>
 	 	 		</div>
 	 	 	</div>
   	</div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </body>
 </html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="polyfounders.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
