--- a/events.html
+++ b/events.html
@@ -37,10 +37,10 @@
       <div class="container events">
         <div class="col-md-6 gutter">
           <div id="/events/1000-pitches.html" class="event">
-            <div class="name">HackPoly</div>
+            <div class="name" align="center">HackPoly</div>
             <div class="oneliner">Hackpoly is Cal Poly Pomona's annual collegiate hackathon put on by Poly Founders. It is a 24-hour software and hardware competition to build anything.</div>
             <div class="image">
-              <div style="background-image:url(/images/meeting.jpg)" class="image-inner"></div>
+              <div style="background-image:url(/images/hackpoly.jpg)" class="image-inner"></div>
             </div>
           </div>
         </div>
@@ -49,47 +49,53 @@
             <div class="name">Bronco Startup Challenge</div>
             <div class="oneliner">Bronco Startup Challenge is Cal Poly Pomona's annual event put on by Poly Founders. It's a 2-minute startup pitch competition that rewards students with over $10,000 in cash.</div>
             <div class="image">
-              <div style="background-image:url(/images/workshop.jpg)" class="image-inner"></div>
+              <div style="background-image:url(/images/group.jpg)" class="image-inner"></div>
             </div>
           </div>
         </div>
         <div class="col-md-3 gutter">
           <div id="/events/community-service.html" class="event">
-            <div class="name">Community Service</div>
-            <div class="oneliner">We reach out to the surrounding Los Angeles community and expose youths to the joys of game development and design.</div>
+            <div class="name">Workshops &amp; Tech Talks</div>
+            <div class="oneliner">We host workshops with real business application, featured startup speakers, and Weekly "Refining the Idea" opportunities which is unique time set aside to share YOUR ideas to a room full of startup focused entrepreneurs. </div>
             <div class="image">
-              <div style="background-image:url(/images/community.jpg)" class="image-inner"></div>
+              <div style="background-image:url(/images/workshop.jpg)" class="image-inner"></div>
             </div>
           </div>
         </div>
         
-        <div class="col-md-6 gutter">
+        <div class="col-md-3 gutter">
           <div id="/events/startup-career-fair.html" class="event">
-            <div class="name">Game Jams</div>
-            <div class="oneliner">We host a quarterly competition where people make games in accordance to a certain theme. We plan to do shorter, "hackathon-esque" jams in the future.</div>
+            <div class="name">Hack Nights</div>
+            <div class="oneliner">We host a quarterly competition where members make products in order to get their hands dirty as well as bond together as the Poly Founder community.</div>
             <div class="image">
-              <div style="background-image:url(/images/jam.jpg)" class="image-inner"></div>
+              <div style="background-image:url(/images/hacknight.jpg)" class="image-inner"></div>
             </div>
           </div>
         </div>
         <div class="col-md-3 gutter">
           <div id="/events/techla.html" class="event">
-            <div class="name">Hackathons</div>
-            <div class="oneliner">We are partnered with HackPoly, Cal Poly Pomona's collegiate hackathon as well as attend other collegiate hackathons nation-wide as  club.</div>
+            <div class="name">General Meetings</div>
+            <div class="oneliner">We meet every THURSDAY 12pm-1pm
+Room 163-2004 (College of Business), be there.</div>
             <div class="image">
-              <div style="background-image:url(/images/hackathon.jpg)" class="image-inner"></div>
+              <div style="background-image:url(/images/meeting.jpg)" class="image-inner"></div>
             </div>
           </div>
         </div>
           <div class="col-md-3 gutter">
           <div id="/events/tech-tours.html" class="event">
             <div class="name">Tech Tours</div>
-            <div class="oneliner">We organize monthly trips to local companies we think are awesome for our members.</div>
+            <div class="oneliner">We organize monthly trips to local startup companies we think are awesome for our members.</div>
             <div class="image">
               <div style="background-image:url(/images/techtour.jpg)" class="image-inner"></div>
             </div>
           </div>
         </div>
+          <div class="col-md-12">
+          <div class="name" align="center">Upcoming Events</div>
+          </div>
+          <div data-tockify-component="calendar" data-tockify-calendar="camille.nibungco"></div>
+<script data-tockify-script="embed" src="https://public.tockify.com/browser/embed.js"></script>
       </div>
       <div class="event-info">
         <div id="event-page" class="event-page">
@@ -98,61 +104,11 @@
         </div>
       </div>
     </div>
-      <section class="ourteam">
-        <h2>EXECUTIVE BOARD:</h2>
-        <p class="description">The Poly Founders E-board is a multidisciplinary group of students varying from Finance to Computer Engineering. Students run every year for their desired position. <br/>Interested in a position? Contact us!</p>
-        <div class="photos">
-          <div id="Simal" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
-            <div style="background-image:url(/img/members/lung-silly.jpg)" class="info">
-              <div>simal@polyfounders.com</div>
-            </div>
-          </div>
-        <div id="Lung" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
-            <div style="background-image:url(/img/members/lung-silly.jpg)" class="info">
-              <div>rushi@polyfounders.com</div>
-            </div>
-          </div>
-        <div id="Kim" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
-            <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div>camille@polyfounders.com</div>
-            </div>
-          </div>
-            <div id="Kim" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
-            <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div>tony@polyfounders.com</div>
-            </div>
-          </div>
-            <div id="Kim" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
-            <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div>eric@polyfounders.com</div>
-            </div>
-          </div>
-            <div id="Kim" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
-            <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div>amy@polyfounders.com</div>
-            </div>
-          </div>
-            <div id="Kim" class="single-member">
-            <div style="background-image:url(/images/placeholder-user.jpg)" class="photo"></div>
-            <div style="background-image:url(/img/members/kim-silly.jpg)" class="info">
-              <div>austin@polyfounders.com</div>
-            </div>
-          </div>
-          </div>
-        </div>
-      </section>
-    </div>
       <div class="footer cust-pad">
  	 		<div class="container">
  	 			<div class="copyright">
  	 			<p>© 2015 POLY FOUNDERS | MAKING AWESOME HAPPEN.</p>
-                <a href="mailto:info@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
+                <a href="mailto:simal@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
     			<a href="http://www.facebook.com/polyfounders" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
     			<a href="http://www.twitter.com/polyfounders" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
     			<a href="http://www.instagram.com/polyfounders" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
