--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
  	 		<div class="container">
  	 			<div class="copyright">
  	 			<p>© 2015 POLY FOUNDERS | MAKING AWESOME HAPPEN.</p>
-                <a href="mailto:info@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
+                <a href="mailto:simal@polyfounders.com"><i class="fa fa-envelope fa-2x"></i></a>
     			<a href="http://www.facebook.com/polyfounders" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
     			<a href="http://www.twitter.com/polyfounders" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
     			<a href="http://www.instagram.com/polyfounders" target="_blank"><i class="fa fa-instagram fa-2x"></i></a>
