--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
       	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css", rel="stylesheet">
       <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700,400italic' rel='stylesheet' type='text/css'>
-  <link href='contact.css' rel='stylesheet' type='text/css'>
+  <link href='css/contact.css' rel='stylesheet' type='text/css'>
   </head>
 
 
