--- a/events.html
+++ b/events.html
@@ -92,13 +92,13 @@ Room 163-1010 (College of Business), be there.</div>
             </div>
           </div>
         </div>
-          <div class="col-md-13">
+          <!--<div class="col-md-13">
           <div class="top" align="center">Upcoming Events</div>
             </div>
           <div align="center">
           <iframe src="https://calendar.google.com/calendar/embed?title=Poly%20Founders&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%232952A3&amp;src=3598n2m5t69r4a7ckkutqv15ck%40group.calendar.google.com&amp;color=%2329527A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="1000" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
-      </div>
+      </div>-->
       <div class="event-info">
         <div id="event-page" class="event-page">
           <div class="event-page-close"><a href="/events.html">&#10006;</a>
